Remove javadoc warnings